--- a/darsi.html
+++ b/darsi.html
@@ -1167,7 +1167,49 @@
                     </a>
                 </div>
             </div>
-            <!-- 1. رشته تولید محتوای آموزشی الکترونیکی -->
+            <!-- New Books for Network and Software Field -->
+            <div class="book-section">
+                <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">کتاب های جدید رشته شبکه و نرم افزار</h4>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <a href="https://drive.google.com/file/d/1Bw9irF1vHr1VXxM03VqFDQJL6c7Ul17u/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        برنامه سازی و الکترونیک محتوای تولید
+                    </a>
+                    <a href="https://drive.google.com/file/d/17XGKo6s3I6lxqtYK1aLDsteaWGEhCMjE/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        هوش مصنوعی(کتاب جدید)
+                    </a>
+                    <a href="https://drive.google.com/file/d/1SBnvaKYJa4O-60k2xYv6-AMe7q52eym4/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نصب و نگهداری تجهیزات شبکه و نرم افزار
+                    </a>
+                    <a href="https://drive.google.com/file/d/1_rPObnM-a10IE0GFUT-9dbVFecp73ZOs/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        پیاده سازی سیستم های اطلاعاتی و طراحی وب
+                    </a>
+                    <a href="https://drive.google.com/file/d/1sgrAPkPTbb0NQdGa3_NMj6nxN0ZVSlB2/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        تجارت الکترونیک و امنیت شبکه
+                    </a>
+                    <a href="https://drive.google.com/file/d/1P1G3sIShsuHNBmJqaIobWie8LhO5_RQK/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        توسعه و برنامه سازی و پایگاه داده
+                    </a>
+                    <a href="https://drive.google.com/file/d/1F7rD6buEtnBSD90nFfPEF-BZqnWwqEI1/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نصب و راه اندازی سیستم های رایانه ایی
+                    </a>
+                    <a href="https://drive.google.com/file/d/1RWnCXE9RCpAznIfPMe_L_kGSHsh2Ew0C/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        دانش فنی پایه
+                    </a>
+                    <a href="https://drive.google.com/file/d/1tprrGkB5KPIQhdpaVUYfdxlSdiEhjLFv/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        دانش فنی تخصصی
+                    </a>
+                </div>
+            </div>
+            <!-- رشته تولید محتوای آموزشی الکترونیکی (با کتاب‌های دهم مشترک) -->
             <div class="book-section">
                 <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">رشته تولید محتوای آموزشی الکترونیکی</h4>
                 <div class="grid md:grid-cols-2 gap-4">
@@ -1191,19 +1233,35 @@
                         <i class="fas fa-book ml-2"></i>
                         کاربر گرافیکی محتوای آموزشی - Adobe Illustrator – MOHO
                     </a>
+                    <a href="http://chap.sch.ir/books/12420" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        دانش فنی پایه 
+                    </a>
+                    <a href="http://chap.sch.ir/books/12976" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نصب و راه‌اندازی سیستم‌های رایانه‌ای 
+                    </a>
+                    <a href="http://chap.sch.ir/books/12977" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        تولید محتوای الکترونیک و برنامه‌سازی 
+                    </a>
+                    <a href="http://chap.sch.ir/books/12402" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نقشه‌کشی فنی رایانه‌ای 
+                    </a>
                 </div>
             </div>
-            <!-- 2. رشته تولید کننده و توسعه دهنده پایگاه های اینترنتی -->
+            <!-- رشته تولید کننده و توسعه دهنده پایگاه های اینترنتی -->
             <div class="book-section">
                 <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">رشته تولید کننده و توسعه دهنده پایگاه های اینترنتی</h4>
                 <div class="grid md:grid-cols-2 gap-4">
-                    <a href="https://drive.google.com/file/d/1P1G3sIShsuHNBmJqaIobWie8LhO5_RQK/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12531" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        توسعه و برنامه سازی و پایگاه داده
+                        توسعه برنامه‌سازی و پایگاه داده
                     </a>
-                    <a href="https://drive.google.com/file/d/1_rPObnM-a10IE0GFUT-9dbVFecp73ZOs/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12532" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        پیاده سازی سیستم های اطلاعاتی و طراحی وب
+                        پیاده‌سازی سیستم‌های اطلاعاتی و طراحی وب
                     </a>
                     <a href="https://drive.google.com/file/d/1zHXqVMOeNIS-Vq3wQ5R_1L9elSx7zwgJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
@@ -1213,9 +1271,17 @@
                         <i class="fas fa-book ml-2"></i>
                         طراحی وب مقدماتی جلد دوم
                     </a>
-                    <a href="https://drive.google.com/file/d/1sgrAPkPTbb0NQdGa3_NMj6nxN0ZVSlB2/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12596" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        دانش فنی تخصصی
+                    </a>
+                    <a href="http://chap.sch.ir/books/12597" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
                         تجارت الکترونیک و امنیت شبکه
+                    </a>
+                    <a href="http://chap.sch.ir/books/12810" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نصب و نگهداری تجهیزات شبکه و سخت‌افزار
                     </a>
                     <a href="http://chap.sch.ir/books/12421" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
@@ -1223,33 +1289,91 @@
                     </a>
                 </div>
             </div>
-            <!-- 3. رشته شبکه و نرم افزار -->
+            <!-- رشته شبکه و نرم افزار -->
             <div class="book-section">
-                <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">رشته شبکه و نرم افزار</h4>
+                <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">رشته شبکه و نرم‌افزار</h4>
                 <div class="grid md:grid-cols-2 gap-4">
-                    <a href="https://drive.google.com/file/d/1Bw9irF1vHr1VXxM03VqFDQJL6c7Ul17u/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12531" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        برنامه سازی و الکترونیک محتوای تولید
+                        توسعه برنامه‌سازی و پایگاه داده
                     </a>
-                    <a href="https://drive.google.com/file/d/17XGKo6s3I6lxqtYK1aLDsteaWGEhCMjE/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12532" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                    (هوش مصنوعی(کتاب جدید
+                        پیاده‌سازی سیستم‌های اطلاعاتی و طراحی وب
                     </a>
-                    <a href="https://drive.google.com/file/d/1SBnvaKYJa4O-60k2xYv6-AMe7q52eym4/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="https://drive.google.com/file/d/1zHXqVMOeNIS-Vq3wQ5R_1L9elSx7zwgJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        نصب و نگهداری تجهیزات شبکه و نرم افزار
+                        طراحی وب مقدماتی جلد اول
                     </a>
-                    <a href="https://drive.google.com/file/d/1F7rD6buEtnBSD90nFfPEF-BZqnWwqEI1/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="https://drive.google.com/file/d/1XWwc9mhd3K-oI8_NsYYFUxbniD5Kdfvl/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        نصب و راه اندازی سیستم های رایانه ایی
+                        طراحی وب مقدماتی جلد دوم
                     </a>
-                    <a href="https://drive.google.com/file/d/1RWnCXE9RCpAznIfPMe_L_kGSHsh2Ew0C/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
-                        <i class="fas fa-book ml-2"></i>
-                        دانش فنی پایه
-                    </a>
-                    <a href="https://drive.google.com/file/d/1tprrGkB5KPIQhdpaVUYfdxlSdiEhjLFv/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                    <a href="http://chap.sch.ir/books/12596" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
                         دانش فنی تخصصی
+                    </a>
+                    <a href="http://chap.sch.ir/books/12597" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        تجارت الکترونیک و امنیت شبکه
+                    </a>
+                    <a href="http://chap.sch.ir/books/12810" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نصب و نگهداری تجهیزات شبکه و سخت‌افزار
+                    </a>
+                    <a href="http://chap.sch.ir/books/12421" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        کتاب همراه هنرجو
+                    </a>
+                </div>
+            </div>
+            <!-- رشته تولیدکننده چندرسانه‌ای -->
+            <div class="book-section">
+                <h4 class="font-bold mb-4 text-base" style="color: var(--accent-green);">رشته تولیدکننده چندرسانه‌ای</h4>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <a href="http://chap.sch.ir/books/13072" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        سیستم عامل
+                    </a>
+                    <a href="http://chap.sch.ir/books/13073" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        مفاهیم پایه فناوری اطلاعات
+                    </a>
+                    <a href="http://chap.sch.ir/books/11061" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        اطلاعات و ارتباطات
+                    </a>
+                    <a href="http://chap.sch.ir/books/11062" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        بسته‌های نرم‌افزاری Excel - PowerPoint
+                    </a>
+                    <a href="http://chap.sch.ir/books/11060" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نرم‌افزار واژه‌پرداز Word 2016
+                    </a>
+                    <a href="http://chap.sch.ir/books/11059" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        نرم‌افزار اداری تکمیلی Microsoft Access - OneNote
+                    </a>
+                    <a href="http://chap.sch.ir/books/11089" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        چندرسانه‌ای دوبعدی جلد اول - Adobe Photoshop
+                    </a>
+                    <a href="http://chap.sch.ir/books/11081" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        Adobe Audition
+                    </a>
+                    <a href="http://chap.sch.ir/books/12075" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        چندرسانه‌ای سه‌بعدی جلد دوم - Adobe Media Encoder
+                    </a>
+                    <a href="http://chap.sch.ir/books/12107" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        Adobe Premiere
+                    </a>
+                    <a href="https://drive.google.com/file/d/11B631NapomGBjfb1XuIsaKGBtobJoCS8/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        طراحی امور گرافیکی با رایانه
                     </a>
                 </div>
             </div>
@@ -1262,6 +1386,10 @@
                         الزامات محیط کار
                     </a>
                     <a href="http://chap.sch.ir/books/12520" target="_blank" rel="noopener noreferrer" class="book-link">
+                        <i class="fas fa-book ml-2"></i>
+                        کارگاه نوآوری و کارآفرینی
+                    </a>
+                    <a href="http://chap.sch.ir/books/12518" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
                         کارگاه نوآوری و کارآفرینی
                     </a>
